# ChipletPart_legosim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_LEGOSIM.md  README_canonical_ga.md  README_compositional.md  compositional_example.sh  compositional_partitioner.sh  compositional_utils.py  convert_floorplet_partition.sh  find_best_floorplet.sh  gen_plots.py  gen_plots_updated.py  gen_sensitivity.py  generate_genetic_jobs.sh  generate_jobs.sh  run_canonical_ga.sh  run_canonical_ga_parallel.sh  run_case_studies.sh  run_chiplet_part.sh  run_chiplet_test.sh  run_core_partition_parallel.sh  run_evaluator.sh  run_evaluator_floorplet.sh  run_tech_enum_all.sh  run_tech_enum_parallel.sh  setup_test_cases.sh  setup_test_data.sh  submit_job.sh  test_canonical_ga.sh  xml_to_hypergraph.py
3dblox_test_cases/: README.md
3dblox_test_cases/48_2_14_4_1600_1600_3dblox/: README.md
3dblox_test_cases/48_4_14_4_1600_1600_3dblox/: 48_4_14_4_1600_1600.3dbx
3dblox_test_cases/48_8_14_4_1600_1600_3dblox/: 48_8_14_4_1600_1600.3dbx
3dblox_test_cases/epyc7282_3dblox/: README.md
3dblox_test_cases/ga100_3dblox/: README.md
3dblox_test_cases/mempool_group_3dblox/: mempool_group.3dbv  mempool_group.3dbx
cost_model/: ._README.md  ._test_api.cpp  .gitignore  CMakeLists.txt  README.md  ReadDesignFromFile.hpp  compile_cpp.sh  evaluator_cpp.cpp  evaluator_cpp.h  run_test_case.sh  test_api.cpp  test_api_cpp.cpp  test_power.cpp
cost_model/examples/: construction_example.cpp  read_design_example.cpp
cost_model/examples/design/: chip_example.cpp  io_example.cpp  layer_example.cpp  test_chip_binding_example.cpp  test_example.cpp  test_time_cost_example.cpp  wafer_process_example.cpp
cost_model/include/: ConstructChip.hpp  ReadDesignFromFile.hpp  pugiconfig.hpp
cost_model/include/design/: Assembly.hpp  Chip.hpp  Design.hpp  DesignCommon.hpp  IO.hpp  Layer.hpp  Test.hpp  WaferProcess.hpp
cost_model/src/: ConstructChip.cpp  ReadDesignFromFile.cpp
cost_model/src/design/: Assembly.cpp  Chip.cpp  IO.cpp  Layer.cpp  Layer.hpp  Test.cpp  Test.cpp.bak  TestChipBinding.cpp  WaferProcess.cpp
cost_model/test/: CMakeLists.txt  test_assembly_process.cpp  test_chip_class.cpp  test_io_process.cpp  test_layer_process.cpp  test_test_process.cpp  test_wafer_process.cpp
cost_model/test_cases/48_1_14_4_1600_1600/: block_definitions_ws-48_1_14_4_1600_1600.txt  block_level_netlist_ws-48_1_14_4_1600_1600.xml
cost_model/test_cases/48_2_14_4_1600_1600/: assembly_process_definitions.xml  block_definitions_ws-48_2_14_4_1600_1600.txt  block_level_netlist_ws-48_2_14_4_1600_1600.xml
cost_model/test_cases/48_4_14_4_1600_1600/: block_definitions_ws-48_4_14_4_1600_1600.txt
cost_model/test_cases/48_8_14_4_1600_1600/: block_level_netlist_ws-48_8_14_4_1600_1600.xml
cost_model/unit_tests_py/: ._test_assembly_process.py  ._test_chip_class.py  ._test_io_process.py  ._test_layer_process.py  ._test_test_process.py  ._test_wafer_process.py  test_assembly_process.py  test_chip_class.py  test_io_process.py  test_layer_process.py  test_test_process.py  test_wafer_process.py
floorplet-part/: Floorplet_part.py  block_definitions_ws-48_1_14_4_6400_6400.txt  block_definitions_ws-48_1_14_4_6400_6400.txt.floorplet_part  run.sh
include/: OpenMPSupport.h
new/: export_ga100_odb.tcl  ga100.3dbv  ga100.3dbx  ga100_min_tech.lef  ga100_odb.3dbv  ga100_odb.3dbx
new/48_1_14_4_1600_1600_3dblox/: 48_1_14_4_1600_1600.3dbv  48_1_14_4_1600_1600.3dbx  README.md
new/48_2_14_4_1600_1600_3dblox/: 48_2_14_4_1600_1600.3dbv  48_2_14_4_1600_1600.3dbx
new/48_4_14_4_1600_1600_3dblox/: 48_4_14_4_1600_1600.3dbv  README.md
new/48_8_14_4_1600_1600_3dblox/: 48_8_14_4_1600_1600.3dbv  README.md
new/epyc7282_3dblox/: epyc7282.3dbv  epyc7282.3dbx
new/mempool_group_3dblox/: README.md
scripts/: create_conda_env.sh  generate_3dblox_conversions.py  install_chipletpart_deps.sh  setup_chipletpart_env.sh
src/: AnnotateOdbWith3DBloxProperties.cpp  CanonicalGA.cpp  CanonicalGA.h  ChipletPart.cpp  ChipletPart.h  ChipletPart3DBloxReader.cpp  ChipletPart3DBloxReader.h  ChipletPartIR.h  ChipletPartOpenDBReader.cpp  ChipletPartOpenDBReader.h  ChipletPartOpenDBWriter.cpp  ChipletPartOpenDBWriter.h  Console.h  FMRefiner.cpp  FMRefiner.h  GeneticTechPartitioner.cpp  GeneticTechPartitioner.h  Hypergraph.cpp  Hypergraph.h  KLRefiner.cpp  KLRefiner.h  Main.cpp  PriorityQueue.cpp  PriorityQueue.h  Utilities.cpp  Utilities.h  floorplan.cpp  floorplan.h  omp_utils.h
src/floorplanner_gwtw/: floorplan_gwtw.h
src/test/: Makefile  test_gwtw_floorplanner.cpp  test_kl_refiner.cpp
test_case_gen/: generateSystemDefinition.py
test_data/: README.md
test_data/48_4_14_4_1600_1600/: block_level_netlist.xml  layer_definitions.xml  test_definitions.xml
test_data/48_8_14_4_1600_1600/: block_definitions.txt
test_data/epyc7282/: block_definitions.txt  block_level_netlist.xml
test_data/ga100/: block_definitions.txt  block_level_netlist.xml  wafer_process_definitions.xml
test_data/mempool_group/: block_definitions.txt  block_level_netlist.xml
